/*
Copyright 2023 Derrick J Wippler

Licensed under the MIT License, you may obtain a copy of the License at

https://opensource.org/license/mit/ or in the root of this code repo

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package duh.v1;

option go_package = "github.com/duh-rpc/duh-go/demo";

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}

message RenderPixelRequest {
  double complexity = 1;
  int64 height = 2;
  int64 width = 3;
  int64 i = 4;
  int64 j = 5;
}

message RenderPixelResponse {
  // Gray represents an 8-bit grayscale color.
  int64 gray = 1;
}